--- a/index.html
+++ b/index.html
@@ -2,12 +2,17 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Phaser starter</title>
+	<title>Phaser ES6 starter</title>
 </head>
 <body>
+
 	<div id="game"></div>
 
-	<script src="bower_components/phaser/build/phaser.min.js"></script>
-	<script src="game/game.js"></script>
+	<script src="jspm_packages/system.js"></script>
+	<script src="config.js"></script>
+	<script src="game-bundled.js"></script>
+	<script>
+		System.import('game/main.js');
+	</script>
 </body>
 </html>
