--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 	<div id="game"></div>
 
-	<script src="bower_components/phaser/build/phaser.min.js"></script>
-	<script src="game/game.js"></script>
+	<script src="build/libs/phaser.min.js"></script>
+	<script src="build/bundle.min.js"></script>
 </body>
 </html>
