Created a "build" folder to use for exports (i.e. Intel XDK)

--- a/index.html
+++ b/index.html
@@ -2,13 +2,20 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no" />
 	<title>Phaser ES5 starter</title>
+	<style>
+		body {
+			margin: 0;
+			padding: 0
+		}
+	</style>
 </head>
 <body>
 
 	<div id="game"></div>
 
-	<script src="build/libs/phaser.min.js"></script>
-	<script src="build/bundle.min.js"></script>
+	<script src="game/libs/phaser.min.js"></script>
+	<script src="game/bundle.min.js"></script>
 </body>
 </html>
