--- a/index.html
+++ b/index.html
@@ -2,20 +2,26 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no" />
+	<meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
 	<title>Phaser ES5 starter</title>
 	<style>
 		body {
 			margin: 0;
 			padding: 0
 		}
+		#game {
+			display: block;
+			width: 100%;
+			height: 100vh
+		}
 	</style>
 </head>
 <body>
 
 	<div id="game"></div>
-
+	
+	<script src="cordova.js"></script>
 	<script src="game/libs/phaser.min.js"></script>
-	<script src="game/bundle.min.js"></script>
+	<script src="game/bundle.js"></script>
 </body>
 </html>
